--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <button type="submit" id="search-button" class="btn btn-search">Search</button>
       </form>
       <p></p>
-      <ul>
-        <li>
+      <ul id="history-buttons">
+        <!--<li>
           <button class="btn" style="display: none;"></button>
         </li>
         <li>
@@ -46,7 +46,7 @@
         </li>
         <li>
           <button class="btn" style="display: none;"></button>
-        </li>
+        </li>-->
       </ul>
     </div>
     <div class="col-right" id="single-column">
@@ -73,20 +73,15 @@
         <div class="weather-forecast">
           <h2>5-Day Forecast</h2>
           <ul id="next5Days">
-            <li>
-              stuff
+            <li id="day1">
             </li>
-            <li>
-              stuff
+            <li id="day2">
             </li>
-            <li>
-              stuff
+            <li id="day3">
             </li>
-            <li>
-              stuff
+            <li id="day4">
             </li>
-            <li>
-              stuff
+            <li id="day5">
             </li>
           </ul>
         </div>
