--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           </li>
           <li>
             UV idx
+            <!--<p style="display: inline; background-color: green; color: white;">0</p>-->
           </li>
         </ul>
       </div>
